--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <nav>
-            <img src="images/logo.jpeg" class="logo">
+            <img src="logo.jpeg" class="logo">
             <ul>
                 <li><a href="#">Travel Guide</a></li>
             <li><a href="#">Tourist places</a></li>
@@ -18,7 +18,7 @@
 </ul>
     <button class="btn">Book Tickets...</button>
         </nav>    <div class="imgs">
-            <img src="images/imgg.jpg.crdownload">
+            <img src="imgg.jpg.crdownload">
         </div>
         <div class="content">
             <h1>
