--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </ul>
     <button class="btn">Book Tickets...</button>
         </nav>    <div class="imgs">
-            <img src="imgg.jpg.crdownload">
+            <img src="imgg.png">
         </div>
         <div class="content">
             <h1>
